fix(dashboard): fix missing publish button on small devices

--- a/automad/src/client/admin/styles/utils/display.less
+++ b/automad/src/client/admin/styles/utils/display.less
@@ -34,18 +34,18 @@
 
 .am-u-display {
 	&-none {
-		display: none;
+		display: none !important;
 	}
 
 	&-small {
 		@media (min-width: @am-breakpoint-medium) {
-			display: none;
+			display: none !important;
 		}
 	}
 
 	&-small-none {
 		@media (max-width: @am-breakpoint-medium-max) {
-			display: none;
+			display: none !important;
 		}
 	}
 }
